# pstuts-rag

./: .gitignore  .gitmodules  ANSWER.md  BLOGPOST.md  BLOGPOST_TDS.md  DEVELOPER.md  Dockerfile  README.md  TODO.md  app.py  app_simple_rag.py  dataset_card.md  evaluate_rag.ipynb  generate_todo_md.py  langgraph.json  pyproject.toml  requirements.txt  temp_function.txt  test_screenshot.py
.github/workflows/: main.yml  tag-on-version.yml
data/: README.md  dev.json  kg_pstuts_transcripts_test_dev.json  kg_test_dev.json  test.json  train.json
docs/: ANSWER.md  DEVELOPER.md
notebooks/: Fine_Tuning_Embedding_for_PSTuts.ipynb  create_golden_dataset.ipynb  evaluate_rag.ipynb  transcript_agents.ipynb  transcript_rag.ipynb
pstuts_rag/: CERT_SUBMISSION.md  setup.py
pstuts_rag/pstuts_rag/: agent_rag.py  agent_tavily.py  agents.py  configuration.py  datastore.py  evaluator_utils.py  graph.py  loader.py  nodes.py  prompt_templates.py  prompts.py  rag.py  rag_for_transcripts.py  state.py  stats.py  utils.py
pstuts_rag/pstuts_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
public/: theme.json
scripts/: generate_todo_md.py  pre-commit
