[project]
name = "pstuts-rag"
version = "2025.05.12"
description = "Agentic RAG system for PsTuts dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "chainlit==2.0.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.3,<0.116",
    "httpx==0.27.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jq>=1.8.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai",
    "langchain-qdrant>=0.2.0",
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
    "numpy==2.2.2",
    "openai==1.59.9",
    "pip>=25.0.1",
    "pydantic==2.10.1",
    "python-multipart>=0.0.18,<0.0.19",
    "ragas>=0.2.15",
    "requests>=2.31.0",
    "tavily-python>=0.7.2",
    "tqdm",
    "typing-extensions>=4.0.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.25.0,<0.26.0",
    "websockets==14.2",

]
authors = [
    { name="Marko Budisic", email="mbudisic@gmail.com" }
    ]
license = "MIT"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pstuts-rag/pstuts-rag"]