[project]
name = "pstuts_rag"
version = "2025.05.12"
description = "Agentic RAG system for PsTuts dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "chainlit==2.0.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.3,<0.116",
    "httpx==0.27.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jq>=1.8.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai",
    "langchain-qdrant>=0.2.0",
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
    "numpy==2.2.2",
    "openai==1.59.9",
    "pip>=25.0.1",
    "pydantic==2.10.1",
    "python-multipart>=0.0.18,<0.0.19",
    "ragas>=0.2.15",
    "requests>=2.31.0",
    "tavily-python>=0.7.2",
    "tqdm",
    "typing-extensions>=4.0.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.25.0,<0.26.0",
    "websockets==14.2",
    "langchain-core>=0.3.59",
    "isort>=6.0.1",
    "pylint-venv>=3.0.4",
]
authors = [{ name = "Marko Budisic", email = "mbudisic@gmail.com" }]
license = "MIT"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pstuts_rag/pstuts_rag"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[tool.ruff]
line-length = 79
target-version = "py313"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path           = ["pstuts_rag/pstuts_rag"]
namespace_packages  = true
explicit_package_bases = true

[tool.flake8]
application-import-names = "pstuts_rag"
extend-ignore = "E203,W503"

[tool.pylint.MASTER]
load-plugins      = "pylint_venv"          # optional but handy
source-roots      = "pstuts_rag"
extension-pkg-allow-list = "numpy, torch"  # compiled deps that astroid cannot parse

[tool.pylint.TYPECHECK]
ignored-modules   = "pkg_resources"        # suppress noisy vendored imports
